<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <kg.autojuuguch.automoikakg.ui.views.ToolbarLayoutView
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarText="@string/car_wash_contacts_text" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ln_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_address"
                style="@style/TextStyle.Medium"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:letterSpacing="-0.02"
                android:text="@string/address_data_text"
                android:textColor="@color/app_main_color"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_city"
                style="@style/TextStyle.Title"
                android:layout_marginTop="10dp"
                android:text="@string/name_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_address" />

            <kg.autojuuguch.automoikakg.ui.views.CustomTextInputView
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:hint="@string/input_city_hint"
                app:inputId="@+id/til_city"
                app:layout_constraintTop_toBottomOf="@id/tv_city" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_street"
                style="@style/TextStyle.Title"
                android:text="@string/street_house_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_city" />

            <kg.autojuuguch.automoikakg.ui.views.CustomTextInputView
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:hint="@string/input_street_house_hint"
                app:inputId="@+id/til_street"
                app:layout_constraintTop_toBottomOf="@id/tv_street" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_district"
                style="@style/TextStyle.Title"
                android:text="@string/district_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_street" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_district"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_min_height"
                android:layout_marginTop="3dp"
                app:endIconDrawable="@drawable/drawable_drop_down_switch"
                app:endIconMode="dropdown_menu"
                app:endIconTint="@color/app_main_color"
                app:layout_constraintTop_toBottomOf="@id/tv_district">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/et_district"
                    style="@style/AutoCompleteTextStyle"
                    android:hint="@string/input_car_wash_district_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_find_in_map"
                style="@style/TextStyle.Click"
                android:layout_marginTop="10dp"
                android:text="@string/find_in_map_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_district" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_way"
                style="@style/TextStyle.Title"
                android:text="@string/way_desc_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_find_in_map" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_way"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@id/tv_way">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_way"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/input_way_desc_hint"
                    android:minLines="2"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="200" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_contacts"
                style="@style/TextStyle.Medium"
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:letterSpacing="-0.02"
                android:text="@string/contacts_data_text"
                android:textColor="@color/app_main_color"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/til_way" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                style="@style/TextStyle.Title"
                android:layout_marginTop="10dp"
                android:text="@string/phone_call_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_contacts" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_min_height"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@id/tv_phone">

                <kg.autojuuguch.automoikakg.ui.views.PhoneFormatEditText
                    android:id="@+id/et_phone"
                    style="@style/TextInputEditTextStyle"
                    android:inputType="phone"
                    app:phoneHint="@string/enter_phone_text" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_whatsapp"
                style="@style/TextStyle.Title"
                android:text="@string/whatsapp_text_unrequired"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_phone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_whatsapp"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_min_height"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@id/tv_whatsapp">

                <kg.autojuuguch.automoikakg.ui.views.PhoneFormatEditText
                    android:id="@+id/et_whatsapp"
                    style="@style/TextInputEditTextStyle"
                    android:inputType="phone"
                    app:phoneHint="@string/enter_whatsapp_text" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_instagram"
                style="@style/TextStyle.Title"
                android:text="@string/instagram_link_text_unrequired"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_whatsapp" />

            <kg.autojuuguch.automoikakg.ui.views.CustomTextInputView
                android:id="@+id/et_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:hint="@string/input_telegram_link_hint"
                app:inputId="@+id/til_instagram"
                app:layout_constraintTop_toBottomOf="@id/tv_instagram" />


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/sc_agreement"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:button="@drawable/ic_drawable_switch"
                app:layout_constraintBottom_toBottomOf="@id/tv_agreement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_agreement" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_agreement"
                style="@style/TextStyle.Text"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/user_agreement_text"
                android:textColor="@color/black"
                android:textColorLink="@color/blue"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/btnContinue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/sc_agreement"
                app:layout_constraintTop_toBottomOf="@id/et_instagram"
                app:layout_constraintVertical_chainStyle="spread_inside" />


            <kg.autojuuguch.automoikakg.ui.views.LoadingButton
                android:id="@+id/btnContinue"
                style="@style/BtnLoadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"
                app:buttonText="@string/do_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_agreement"
                app:layout_constraintVertical_chainStyle="spread_inside" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>