<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet">


    <View
        android:id="@+id/view"
        android:layout_width="30dp"
        android:layout_height="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/bottom_sheet_top" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnClear"
        style="@style/TextStyle.Click"
        android:layout_alignTop="@id/view"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background_text"
        android:text="@string/clear_variants_text"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bottom_sheet_label"
        style="@style/TextStyle.Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/filters_text"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/ln_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_bottom_sheet_label"
        android:layout_marginHorizontal="@dimen/margin_horizontal_default"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyle.Title"
            android:text="@string/district_filter_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_district"
            style="@style/TextViewStyle"
            android:layout_marginTop="3dp"
            android:drawableEnd="@drawable/ic_drop_down_unchecked"
            android:hint="@string/district_filter_hint" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextStyle.Title"
            android:text="@string/car_wash_type_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type"
            style="@style/TextViewStyle"
            android:layout_marginTop="3dp"
            android:drawableEnd="@drawable/ic_drop_down_unchecked"
            android:hint="@string/input_car_wash_type_hint" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_free"
        style="@style/TextStyle.Title"
        android:layout_below="@id/ln_fields"
        android:layout_marginStart="@dimen/margin_horizontal_default"
        android:text="@string/text_posts" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextStyle.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/sc_free"
        android:layout_alignBottom="@id/sc_free"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/sc_free"
        android:gravity="center_vertical"
        android:text="@string/only_free_text"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/sc_free"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/tv_free"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_horizontal_default"
        android:layout_marginTop="5dp"
        android:button="@drawable/ic_drawable_switch"
        tools:checked="true" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accept"
        style="@style/ButtonStyle.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sc_free"
        android:layout_marginHorizontal="@dimen/margin_horizontal_default"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/accept" />

</RelativeLayout>

