<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <kg.autojuuguch.automoikakg.ui.views.ToolbarLayoutView
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:toolbarText="@string/main_data_text" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ln_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_main"
                style="@style/TextStyle.Medium"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:letterSpacing="-0.02"
                android:text="@string/car_wash_data_text"
                android:textColor="@color/app_main_color"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name"
                style="@style/TextStyle.Title"
                android:layout_marginTop="10dp"
                android:text="@string/car_wash_name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_main" />

            <kg.autojuuguch.automoikakg.ui.views.CustomTextInputView
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:hint="@string/input_car_wash_name_hint"
                app:inputId="@+id/til_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                style="@style/TextStyle.Title"
                android:text="@string/car_wash_description_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <kg.autojuuguch.automoikakg.ui.views.CustomTextInputView
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:hint="@string/input_car_wash_desc_hint"
                app:inputType="textCapSentences|textMultiLine"
                app:minLines="4"
                app:maxLines="500"
                app:inputId="@+id/til_description"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_boxes"
                style="@style/TextStyle.Title"
                android:text="@string/car_wash_boxes_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description" />

            <kg.autojuuguch.automoikakg.ui.views.CustomTextInputView
                android:id="@+id/et_boxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:hint="@string/input_car_wash_boxes_hint"
                app:inputId="@+id/til_boxes"
                app:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/tv_boxes" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_type"
                style="@style/TextStyle.Title"
                android:text="@string/car_wash_type_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_boxes" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_type"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_min_height"
                android:layout_marginTop="3dp"
                app:endIconDrawable="@drawable/drawable_drop_down_switch"
                app:endIconMode="dropdown_menu"
                app:endIconTint="@color/app_main_color"
                app:layout_constraintTop_toBottomOf="@id/tv_type">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/et_type"
                    style="@style/AutoCompleteTextStyle"
                    android:hint="@string/input_car_wash_type_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_photo"
                style="@style/TextStyle.Title"
                android:layout_marginTop="30dp"
                android:text="@string/car_wash_image_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_type" />

            <kg.autojuuguch.automoikakg.ui.views.AvatarView
                android:id="@+id/cardAvatar"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_photo"
                app:strokeColor="@color/input_title_text_color"
                app:strokeWidth="1dp" />


            <TextView
                android:id="@+id/tv_add_photo"
                style="@style/TextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_background_text"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.02"
                android:text="@string/add_image_text"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/btnContinue"
                app:layout_constraintStart_toStartOf="@id/cardAvatar"
                app:layout_constraintTop_toBottomOf="@id/cardAvatar"
                app:layout_constraintVertical_chainStyle="spread_inside" />


            <kg.autojuuguch.automoikakg.ui.views.LoadingButton
                android:id="@+id/btnContinue"
                style="@style/BtnLoadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"
                app:buttonText="@string/continue_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_photo"
                app:layout_constraintVertical_chainStyle="spread_inside" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>